feat: implement bulk mode
